Fix image margin on small devices

--- a/apps/web/assets/stylesheets/application.css.scss
+++ b/apps/web/assets/stylesheets/application.css.scss
@@ -204,6 +204,10 @@ body > .container {
       width: 190px;
   }
 
+  .offer-img img {
+    margin-left: 25px;
+  }
+
   .offer-details {
     text-align: center;
   }
